<resources>
    <string name="app_name">To-Do List</string>

    <string name="main_activity_name">All Tasks</string>
    <string name="add_task_activity_name">Add a New Task</string>

    <!-- Strings for MainActivity -->
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>

    <!-- Strings for AddTaskActivity -->
    <!-- This etaskEntrytask has a unicode character for "..." = "&#8230;" -->
    <string name="edit_task_description">Describe your taskEntry&#8230;</string>
    <string name="priority_string">Priority</string>
    <string name="target_string">Target</string>
    <string name="title_string">Title</string>
    <string name="desc_string">Description</string>


    <string name="high_priority">High</string>
    <string name="med_priority">Medium</string>
    <string name="low_priority">Low</string>

    <string name="add_button">Add</string>
    <string name="update_button">Update</string>
</resources>
