<?xml version="1.0" encoding="utf-8"?>
<!-- This vertical linear layout contains all the views in the AddTaskActivity code.
 This includes an EditText to adtaskEntrytask description, and buttons to select a priority
 -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context= ".tasks.MainActivity"
    >


    <LinearLayout
        android:orientation="vertical"
        android:background="#106E4A"
        android:layout_width="match_parent"
        android:layout_height="198dp"
        >

        <TextView

            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="#FFF"
            android:text="@string/add_task_activity_name"
            android:textAlignment="center"
            android:layout_marginBottom="18dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="-70dp"
        android:background="@drawable/bgitemdoes"
        android:paddingBottom="22dp"
        android:paddingTop="22dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">



            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/title_string"
                android:textColor="@android:color/primary_text_light" />
            <EditText
                android:id="@+id/etTitle"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Tilte"/>
            <!-- EditText for getttaskEntrytask description input -->

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/desc_string"
                android:textColor="@android:color/primary_text_light" />
            <EditText
                android:id="@+id/editTextTaskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/edit_task_description"
                android:maxLength="20"
                android:paddingBottom="@dimen/activity_horizontal_margin" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/target_string"
                android:textColor="@android:color/primary_text_light" />
            <EditText
                android:id="@+id/etTarget"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="40"
                android:hint="When will you finish the task"/>
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="open date picker" />
            </RelativeLayout>


            <!-- TextView and FrameLayout (which contains buttons) for Priority Selection -->
            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/priority_string"
                android:textColor="@android:color/primary_text_light" />

            <!-- RadioGroup for visible selection of a priority -->
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/radButton1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/materialRed"
                    android:checked="true"
                    android:text="@string/high_priority"
                    android:theme="@style/WhiteRadioButton" />

                <RadioButton
                    android:id="@+id/radButton2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/materialOrange"
                    android:text="@string/med_priority"
                    android:theme="@style/WhiteRadioButton" />

                <RadioButton
                    android:id="@+id/radButton3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/materialYellow"
                    android:text="@string/low_priority"
                    android:theme="@style/WhiteRadioButton" />

            </RadioGroup>

            <!-- Add button -->
            <Button
                android:id="@+id/saveButton"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#106E4A"
                android:text="@string/add_button"
                android:textColor="@android:color/primary_text_dark" />


        </LinearLayout>


    </LinearLayout>
</LinearLayout>
